--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Port=5432;Database=pubg_ecommerce;Username=postgres;Password=your_password;"
+  },
+  "Cloudinary": {
+    "CloudName": "dmwfdkml6",
+    "ApiKey": "565611315435648",
+    "ApiSecret": "d7ywK9dRepHZ7qWy2rEEHH5ahzU"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
