--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,8 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=db;Port=5432;Database=pubg_ecommerce;Username=postgres;Password=your_password;"
+  },
+  "Cloudinary": {
+    "CloudName": "dmwfdkml6",
+    "ApiKey": "565611315435648",
+    "ApiSecret": "d7ywK9dRepHZ7qWy2rEEHH5ahzU"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
