Add Cloudinary upload and deletion service with DTOs for product images

--- a/.gitignore
+++ b/.gitignore
@@ -94,10 +94,26 @@ docker-compose.override.yml
 *.db
 *.db-shm
 *.db-wal
+*.sqlite
+*.sqlite3
+pgdata/
+
+# Development config files
+appsettings.Development.json
+appsettings.Local.json
+*.Development.json
+*.Local.json
+
+# API Keys and Secrets
+*.env
+cloudinary.json
+cloudinary.Development.json
+secrets.json
 
 # Swagger
 swagger.json
 swagger.yaml
+swagger/*
 
 # OS generated files
 .DS_Store
@@ -111,8 +127,40 @@ Thumbs.db
 # Test Results
 [Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
+TestResults/
+[Cc]overage/
+coverage.*
 
 # Backup & Report files
 *.[Bb]ak
 *.backup
 *.report
+*.temp
+*~
+
+# Docker related
+.docker/
+data/
+.docker-data/
+docker-compose.override.yml
+
+# IDE and Editor files
+*.suo
+*.user
+*.userosscache
+*.sln.docstates
+*.userprefs
+.vs/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.idea/
+*.swp
+*.swo
+
+# Logs
+logs/
+*.log
+Log/
