--- a/E-commerce-pubg-api.csproj
+++ b/E-commerce-pubg-api.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.24.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0">
