Add Product service interface and implement CRUD operations with logging

--- a/appsettings.json
+++ b/appsettings.json
@@ -10,7 +10,14 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "E_commerce_pubg_api.Application.Services.CategoryService": "Information"
+    },
+    "Console": {
+      "FormatterName": "Simple",
+      "FormatterOptions": {
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss "
+      }
     }
   },
   "AllowedHosts": "*"
